Change CE, AC, and DC buttons

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <body>
         <div class="calculator">
             <div class="display">80085</div>
-            <div id="clear" class="button">C</div>
-            <div id="exponent" class="button alt-operator">exp</div>
-            <div id="modulus" class="button alt-operator">mod</div>
+            <div id="clear" class="button">CE</div>
+            <div id="ac" class="button">AC</div>
+            <div id="dc" class="button alt-operator">DC</div>
             <div id="divide" class="button operator">%</div>
             <div id="b7" class="button number">7</div>
             <div id="b8" class="button number">8</div>
