--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
         <link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet">    </head>
     <body>
         <div class="calculator">
-            <div class="display">80085</div>
+            <div id="display" class="display">0</div>
             <div id="clear" class="button">CE</div>
             <div id="ac" class="button">AC</div>
             <div id="dc" class="button alt-operator">DC</div>
             <div id="divide" class="button operator">%</div>
-            <div id="b7" class="button number">7</div>
-            <div id="b8" class="button number">8</div>
-            <div id="b9" class="button number">9</div>
+            <div id="b7" class="button number" data-num="7">7</div>
+            <div id="b8" class="button number" data-num="8">8</div>
+            <div id="b9" class="button number" data-num="9">9</div>
             <div id="multiply" class="button operator">x</div>
-            <div id="b4" class="button number">4</div>
-            <div id="b5" class="button number">5</div>
-            <div id="b6" class="button number">6</div>
+            <div id="b4" class="button number" data-num="4">4</div>
+            <div id="b5" class="button number" data-num="5">5</div>
+            <div id="b6" class="button number" data-num="6">6</div>
             <div id="minus" class="button operator">-</div>
-            <div id="b1" class="button number">1</div>
-            <div id="b2" class="button number">2</div>
-            <div id="b3" class="button number">3</div>
+            <div id="b1" class="button number" data-num="1">1</div>
+            <div id="b2" class="button number" data-num="2">2</div>
+            <div id="b3" class="button number" data-num="3">3</div>
             <div id="plus" class="button operator">+</div>
-            <div id="b0" class="button number">0</div>
+            <div id="b0" class="button number" data-num="0">0</div>
             <div id="point" class="button number">.</div>
             <div id="equals" class="button operator">=</div>
         </div>
